--- a/JsTreeView.html
+++ b/JsTreeView.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+
     <meta charset="UTF-8">
-    <title></title>
+    <title>JsTreeview</title>
+
+    <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
+    <!-- Include Fancytree skin and library -->
+    <link href="css/skin-lion/ui.fancytree.min.css" rel="stylesheet" type="text/css">
+    <script src="js/lib/jquery.fancytree-all.js" type="text/javascript"></script>
+    <script src="js/JsTreeViewSetter.js" type="application/javascript"></script>
+
+
+    <script type="text/javascript">
+
+        $(document).ready(function(){
+
+            setPoolPartyTreeBroswer($("#tree"))
+        });
+
+    </script>
 </head>
 <body>
+
+<div id="tree" title="List" style="width: 20%"><h4>Departments</h4></div>
 
 </body>
 </html>
