--- a/JsTreeView.html
+++ b/JsTreeView.html
@@ -8,7 +8,7 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
     <!-- Include Fancytree skin and library -->
-    <link href="css/skin-lion/ui.fancytree.min.css" rel="stylesheet" type="text/css">
+    <link href="css/skin-lion/ui.fancytree-modifed.css" rel="stylesheet" type="text/css">
     <script src="js/lib/jquery.fancytree-all.js" type="text/javascript"></script>
     <script src="js/JsTreeViewSetter.js" type="application/javascript"></script>
 
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<div id="tree" title="List" style="width: 40%"><h4>Departments</h4></div>
+<div id="tree" title="List" style="width: 40%"><h4>Topics</h4></div>
 
 </body>
 </html>
