Added metadata field as parameter to setPoolPartyTreeBroswer

--- a/JsTreeView.html
+++ b/JsTreeView.html
@@ -17,7 +17,7 @@
 
         $(document).ready(function(){
 
-            setPoolPartyTreeBroswer($("#tree"))
+            setPoolPartyTreeBroswer($("#tree"), "dc_subject")
         });
 
     </script>
